--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
 		"react-slick": "^0.30.2"
 	},
 	"devDependencies": {
+		"@next/third-parties": "^14.2.4",
 		"@types/node": "^20",
 		"@types/react": "^18",
 		"@types/react-dom": "^18",
