--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
 		"@chakra-ui/react": "^2.8.2",
 		"@emotion/react": "^11.11.4",
 		"@emotion/styled": "^11.11.5",
+		"axios": "^1.7.9",
 		"dotenv": "^16.4.7",
 		"framer-motion": "^11.2.12",
 		"next": "14.2.15",
